--- a/index.html
+++ b/index.html
@@ -2,46 +2,60 @@
 <html>
 
 <head>
-  <!--
-    If you are serving your web app in a path other than the root, change the
-    href value below to reflect the base path you are serving from.
-
-    The path provided below has to start and end with a slash "/" in order for
-    it to work correctly.
-
-    For more details:
-    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
-
-    This is a placeholder for base href that will be replaced by the value of
-    the `--base-href` argument provided to `flutter build`.
-  -->
   <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+
+  <!-- SEO Meta Tags -->
+  <title>ScrapBaazar - Sell Scrap Online in Dehradun | Best Prices & Pickup</title>
+  <meta name="description"
+    content="Sell your scrap online at ScrapBaazar. Get instant quotes, doorstep pickup in Dehradun, and the best rates for all types of scrap materials. Contact us at admin@scrapbaazar.com or +91 6399823146.">
+
+  <!-- Contact Info -->
+  <meta name="author" content="ScrapBaazar">
+  <meta name="contact" content="admin@scrapbaazar.com">
+  <meta name="address" content="12 Chunna bhatta, Asian chemicals, Adhoiwala, Dehradun, Uttarakhand 248001">
+  <meta name="keywords"
+    content="scrap dealer Dehradun, online scrap selling, scrap rates Dehradun, doorstep scrap pickup, scrapbaazar">
+
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="ScrapBaazar - Sell Scrap Online in Dehradun" />
+  <meta property="og:description"
+    content="Doorstep scrap pickup in Dehradun. Best prices, quick service. Contact ScrapBaazar today!" />
+  <meta property="og:url" content="https://www.scrapbaazar.com" />
+  <meta property="og:image" content="https://www.scrapbaazar.com/assets/preview.png" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="ScrapBaazar" />
+
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="ScrapBaazar - Best Scrap Dealer in Dehradun" />
+  <meta name="twitter:description"
+    content="Sell your scrap online easily. Instant quotes, best rates, and fast pickup. ScrapBaazar." />
+  <meta name="twitter:image" content="https://www.scrapbaazar.com/assets/preview.png" />
 
   <!-- iOS meta tags & icons -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="scrapbazaar">
+  <meta name="apple-mobile-web-app-title" content="ScrapBaazar">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png" />
 
-  <title>scrapwala</title>
+  <!-- Social Profiles (Optional for rich search snippets) -->
+  <link rel="me" href="mailto:admin@scrapbaazar.com">
+  <link rel="me" href="tel:+916399823146">
+  <link rel="me" href="https://www.facebook.com/profile.php?id=61573146666461">
+  <link rel="me" href="https://www.instagram.com/scraphub0">
+  <link rel="me" href="https://x.com/scraphub0">
+
   <link rel="manifest" href="manifest.json">
-  <script type="text/javascript">
-    window.flutterWebRenderer = "html";
-  </script>
 </head>
 
 <body>
   <script src="flutter_bootstrap.js" async></script>
-  <script type="text/javascript">
-    window.flutterWebRenderer = "html";
-  </script>
 </body>
 
 </html>
